fixed styles sheet

--- a/weather_updates/templates/weather_updates/home.html
+++ b/weather_updates/templates/weather_updates/home.html
@@ -30,9 +30,7 @@
         <div class="card-text float-end">{{ city_weather_update.time }}</div>
         <div class="card-text">
           <h5>
-            {{ city_weather_update.city }} {{ city_weather_update.country_code
-            }}
-          </h5>
+             {{ city_weather_update.city }}  {{ city_weather_update.country_code }} 
         </div>
         <div class="card-text">
           <h6>{{ city_weather_update.temperature }}</h6>
