--- a/weather_updates/static/styles.css
+++ b/weather_updates/static/styles.css
@@ -1,56 +1,46 @@
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-    background-color: #fff;
+  background-color: #f0f0f0;
 }
 
+.row.justify-content-center.my-5 {
+  margin-top: 50px;
+}
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
+.col-md-5 {
+  margin: auto;
+  width: 50%;
+}
+
+.mt-4.p-5.bg-success.text-white.rounded.mb-3 {
+    padding: 20px;
+    background-color: #d83810;
+    color: white;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    justify-content: center;
+    display: flex;
+}
+
+.input-group {
+  margin-bottom: 20px;
+}
+
+.btn.btn-success {
+  background-color: #28a745;
+  color: white;
+}
+
+.card {
+    margin-top: 20px;
+    border: 1px solid black;
+}
+
+.card-body {
+    padding: 20px;
+    
+}
+
+.card-text {
     margin-bottom: 10px;
+    font-size: 16px;
 }
-
-
-a {
-    color: blue;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-a:visited {
-    color: purple;
-}
-
-
-button {
-    padding: 10px 20px;
-    background-color: #ccc;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #999;
-}
-
-
-input[type="text"], input[type="email"], textarea {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
