--- a/weather_updates/templates/weather_updates/base.html
+++ b/weather_updates/templates/weather_updates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,8 +8,9 @@
     <title>Weather Updates App</title>
     <!-- getting bootstrap5 from CDN -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      href="{% static 'styles.css' %}"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
     />
   </head>
   <body>
