--- a/weather_updates/templates/weather_updates/home.html
+++ b/weather_updates/templates/weather_updates/home.html
@@ -14,6 +14,7 @@
           class="form-control"
           name="city"
           placeholder="Search City......."
+          style="font-size: 20px; height: 30px"
         />
         <div class="input-group-append">
           <button class="btn btn-success" type="submit">Search</button>
