fixed css and showed the country

--- a/weather_updates/static/weather_updates/css/styles.css
+++ b/weather_updates/static/weather_updates/css/styles.css
@@ -25,7 +25,7 @@ body {
     margin-bottom: 20px;
 }
 .btn.btn-success {
-    background-color: #090cc7b0;
+    background-color: #0ab2cf;
     color: white;
     padding: 10px 20px;
     font-size: 18px;
