--- a/weather_updates/templates/weather_updates/home.html
+++ b/weather_updates/templates/weather_updates/home.html
@@ -31,8 +31,8 @@
         <div class="card-text float-end">{{ city_weather_update.time }}</div>
         <div class="card-text">
           <h5>
-            {{ city_weather_update.city }}, {{ city_weather_update.state }} {{
-            city_weather_update.country_code }}
+            {{ city_weather_update.city }}, {{ city_weather_update.state }}, 
+            {{ city_weather_update.country_code }}
           </h5>
         </div>
         <div class="card-text">
