--- a/weather_updates/templates/weather_updates/base.html
+++ b/weather_updates/templates/weather_updates/base.html
@@ -8,7 +8,7 @@
     <title>JAM Weather App</title>
     <!-- getting bootstrap5 from CDN -->
     <link
-      href="{% static 'styles.css' %}"
+      href="{% static 'weather_updates\css\styles.css' %}"
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
     />
