changed search button color

--- a/weather_updates/static/weather_updates/css/styles.css
+++ b/weather_updates/static/weather_updates/css/styles.css
@@ -40,7 +40,7 @@ body {
   font-size: 24px;
 }
 .btn.search-btn {
-  background-color: #b5c200;
+  background-color: #0ab2cf;
   color: white;
   border: none;
   padding: 10px 20px;
