--- a/weather_updates/templates/weather_updates/home.html
+++ b/weather_updates/templates/weather_updates/home.html
@@ -1,4 +1,4 @@
-<!-- extends is for inheriting from the base.html -->
+<!-- Inherit's from base.html -->
 {% extends 'weather_updates/base.html' %} {% block content %}
 
 <div class="row justify-content-center my-5">
