--- a/weather_updates/templates/weather_updates/base.html
+++ b/weather_updates/templates/weather_updates/base.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAM Weather App</title>
-    <!-- getting bootstrap5 from CDN -->
-    <link href="{% static 'weather_updates/css/styles.css' %}" rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'weather_updates/css/styles.css' %}">
+
 </head>
 <body>
     {% block content %}
